--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "eleventy && cp -r assets _site/",
     "tidy": "npm run minify && npm run prettify",
     "minify": "npx minify _site/index.html > _site/index-clean.html",
-    "prettify": "npx prettier --write _site/index-clean.html",
+    "prettify": "npx prettier --write _site/index.html",
     "start": "eleventy --serve",
     "dev": "eleventy --serve --watch"
   },
@@ -16,9 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^1.0.2",
-    "beautify": "^0.0.8",
     "liquidjs": "^9.42.1",
-    "minify": "^9.1.0",
     "path": "^0.12.7",
     "prettier": "^2.7.1"
   }
