--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-CV_API_URL=
-CONTACT_API_URL=
-GOOGLE_RECAPTCHA_KEY=
+REACT_APP_CV_API_URL=
+REACT_APP_CONTACT_API_URL=
+REACT_APP_GOOGLE_RECAPTCHA_KEY=
