--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
-REACT_APP_CV_API_URL=
-REACT_APP_CONTACT_API_URL=
-REACT_APP_GOOGLE_RECAPTCHA_KEY=
+MONGODB_URL=
+MONGODB_COLLECTION=
+
+GOOGLE_RECAPTCHA_URL=
+GOOGLE_SECRET_KEY=
+
+MAILER_USERNAME=
+MAILER_PASSWORD=
+MAILER_FROM=
+MAILER_TO=
+
+NEXT_PUBLIC_APP_URL=
+NEXT_PUBLIC_CONTACT_API_URL=
+NEXT_PUBLIC_GOOGLE_RECAPTCHA_KEY=
