--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,17 +13,32 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@netlify/edge-functions": "^2.2.0",
+    "@netlify/functions": "^2.3.0",
+    "@react-email/container": "^0.0.8",
+    "@react-email/html": "^0.0.4",
+    "@react-email/section": "^0.0.9",
+    "@react-email/text": "^0.0.5",
     "@types/node": "20.2.5",
+    "@types/nodemailer": "^6.4.13",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.5.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.16.4",
+    "mongodb": "^6.1.0",
     "next": "13.4.4",
+    "nodemailer": "^6.9.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "^1.9.5",
     "react-google-recaptcha-v3": "^1.10.1",
     "sass": "^1.62.1",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.40.1",
+    "browserify": "^17.0.0"
   }
 }
