--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,10 @@
 NODE_ENV=development
 
 MONGODB_URL=
+MONGODB_TOKEN=
+MONGODB_DATABASE=
 MONGODB_COLLECTION=
-
-GOOGLE_RECAPTCHA_URL=
-GOOGLE_SECRET_KEY=
-
-MAILER_USERNAME=
-MAILER_PASSWORD=
-MAILER_FROM=
-MAILER_TO=
+MONGODB_DATA_SOURCE=
 
 NEXT_PUBLIC_APP_URL=
 NEXT_PUBLIC_MAILER_URL=
