--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.5.1",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
+    "eslint-config-next": "^14.2.3",
     "framer-motion": "^10.16.4",
     "mongodb": "^6.1.0",
-    "next": "13.4.4",
+    "next": "^14.2.3",
     "nodemailer": "^6.9.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-email": "^1.9.5",
     "react-google-recaptcha-v3": "^1.10.1",
     "sass": "^1.62.1",
