Update example env

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,2 @@
-NODE_ENV=development
-
-MONGODB_URL=
-MONGODB_TOKEN=
-MONGODB_DATABASE=
-MONGODB_COLLECTION=
-MONGODB_DATA_SOURCE=
-
-NEXT_PUBLIC_APP_URL=
-NEXT_PUBLIC_MAILER_URL=
+MESH_API_URL=
 NEXT_PUBLIC_GOOGLE_RECAPTCHA_KEY=
