--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.12",
     "eslint": "8.41.0",
     "eslint-config-next": "^14.2.3",
     "framer-motion": "^10.16.4",
