Update CV to use new CV endpoint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@/*": [
         "./app/*"
       ]
-    }
+    },
+    "allowSyntheticDefaultImports": true,
   },
   "include": [
     "next-env.d.ts",
